--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         Hector Resume
     </title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -23,9 +24,7 @@
                     <strong>Education</strong>
                     <ul>
                         <li>
-                            <strong>
-                                <a href="https://tec.mx/es">ITESM - Monterrey</a>
-                            </strong>
+                            <a href="https://tec.mx/es">ITESM - Monterrey</a>
                         </li>
                         <li>
                             Bachelor of Science in Computer Science and Technology Engineering (ITC)
