Added more css'

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <header>
-        <h1>Hector de Luna Pamanes</h1>
-        <address>Puerto Angel 4621, Brisas la Punta, Monterrey</address>
-        <p>81 8201 0649</p>
+        <div>
+            <h1>Hector de Luna Pamanes</h1>
+            <address>Puerto Angel 4621, Brisas la Punta, Monterrey</address>
+            <p>81 8201 0649</p>
+        </div>
     </header>
     <main>
         <nav>
@@ -20,18 +22,7 @@
         </nav>
         <section>
             <ol>
-                <li>
-                    <strong>Education</strong>
-                    <ul>
-                        <li>
-                            <a href="https://tec.mx/es">ITESM - Monterrey</a>
-                        </li>
-                        <li>
-                            Bachelor of Science in Computer Science and Technology Engineering (ITC)
-                        </li>
-                    </ul>
-                </li>
-                <li>
+                <li class='major'>
                     <strong>
                         Major Projects
                     </strong>
@@ -64,6 +55,17 @@
                     </ul>
                 </li>
                 <li>
+                    <strong>Education</strong>
+                    <ul>
+                        <li>
+                            <a href="https://tec.mx/es">ITESM - Monterrey</a>
+                        </li>
+                        <li>
+                            Bachelor of Science in Computer Science and Technology Engineering (ITC)
+                        </li>
+                    </ul>
+                </li>
+                <li>
                     <strong>Skills: </strong>
                     <span> C#, C++, HTML, PHP, SQL, Javascript</span>
                 </li>
@@ -74,14 +76,16 @@
                         Vue.js, React.
                     </div>
                 </li>
+                <li>
+                        <img
+                        src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fpics.onsizzle.com%2Fheres-an-otter-holding-a-guitar-27052773.png&f=1" />
+          
+                </li>
             </ol>
         </section>
     </main>
     <footer>
         <h4>Hector de Luna Pamanes</h4>
-        <div>
-            <img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fpics.onsizzle.com%2Fheres-an-otter-holding-a-guitar-27052773.png&f=1"/>
-        </div>
     </footer>
 </body>
 
